# pypulsepal

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.forgejo/workflows/: ci.yml  docs.yml  release.yml
.github/workflows/: CI.yaml  ci.yml  docs.yml  release.yml
advanced/: index.html
api/: index.html
concepts/: index.html
docs/: advanced.md  api.md  concepts.md  getting_started.md  index.md  usage.md
examples/: basic_pulse_train.py  biphasic_pulse.py  connection_styles.py  custom_pulse_train.py  custom_waveform.py  fixed_voltage.py  load_from_config.py  save_config.py
examples/config/: example_config.json  example_config.yaml
getting_started/: index.html
pypulsepal/: _arcom.py  config_io.py  definitions.py  pulsepal.py
scripts/: test_ack_behaviour.py  test_connection.py
search/: search_index.json
src/pypulsepal/: __init__.py  _arcom.py  _version.py  definitions.py  models.py  pulsepal.py
tests/: test_config_io.py  test_encoding.py  test_models.py  test_pulsepal.py  test_pulsepal_methods.py
usage/: index.html
