[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pypulsepal"
dynamic = ["version"]
description = "Python API for the PulsePal open-source pulse train generator"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Lars B. Rollik", email = "l.b.rollik@protonmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "pyserial",
    "numpy",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/murineshiftwork/pypulsepal"
Documentation = "https://murineshiftwork.github.io/pypulsepal/"
"Issue Tracker" = "https://github.com/murineshiftwork/pypulsepal/issues"

[project.optional-dependencies]
yaml = ["pyyaml"]
dev = [
    "pytest>=8",
    "pytest-cov",
    "pre-commit",
    "ruff",
    "mypy",
    "types-PyYAML",
    "commitizen",
]
docs = [
    "mkdocs-material",
]

# ---------------------------------------------------------------------------
# Build
# ---------------------------------------------------------------------------

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/pypulsepal/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pypulsepal"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/pypulsepal",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/CITATION.cff",
    "/VERSION",
]

# ---------------------------------------------------------------------------
# Commitizen
# ---------------------------------------------------------------------------

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "commitizen"
version = "0.4.3"
tag_format = "v$version"
update_changelog_on_bump = false
version_files = ["VERSION"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/pypulsepal --cov-report=term-missing --maxfail=5"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 88
indent-width = 4
exclude = ["scripts", "src/pypulsepal/_version.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "YTT", "SIM", "PTH", "TCH", "PYI"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"src/pypulsepal/_arcom.py" = ["E501"]  # vendored file — do not reformat
"src/pypulsepal/pulsepal.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
mypy_path = "src"
warn_return_any = false
ignore_missing_imports = true
